# tatsu-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  test_tatsu.py
examples/: basic_user_data.py  guild_rankings_graph.py
tatsu/: __init__.py  client.py  enums.py  errors.py  hooks.py  http.py  models.py  types_.py
tatsu_api/: __init__.py  _async_utils.py  _lockout.py  client.py  enums.py  models.py
tests/: lib_test.py  test_logging.py
